--- a/yourcaryourwayfront/src/app/chat/chat.component.html
+++ b/yourcaryourwayfront/src/app/chat/chat.component.html
@@ -2,11 +2,10 @@
     <h2>Live Chat</h2>
   
     <div *ngFor="let message of messages">
-      {{ message }}
+      <strong>{{ message.senderUsername }}</strong>: {{ message.messageText }}
     </div>
   
     <div>
       <textarea [(ngModel)]="newMessage" placeholder="Type your message..."></textarea>
       <button (click)="sendMessage()">Send</button>
     </div>
-  </div>
